--- a/index.html
+++ b/index.html
@@ -131,8 +131,64 @@
         <section class="container" id="main">
             <!-- Start Survey container -->
             <div id="survey_container">
-                <form name="example-1" id="wrapped" action="survey_send_1.php" method="POST">
+                <form name="loan-form" id="wrapped" action="send-action" method="POST">
                     <div id="middle-wizard">
+                        <div class="step row">
+                            <div class="col-xs-12 main-title">
+                                <h3>Select the best loan for your business.</h3>
+                            </div>
+                            <div class="col-xs-12">
+                                <div class="loan-type row">
+                                    <div class="col-xs-12 col-sm-6 home-box">
+                                        <h4 class="pricing-header">Term Loan</h4>
+                                        <ul>
+                                            <li>Set interest rate, amount and term</li>
+                                            <li>Pre-specified, fixed repayment schedule</li>
+                                            <li>Steadily build your business credit with constant repayments</li>
+                                        </ul>
+                                        <a role="button" title="Next" name="forward" class="button_medium_2 loan-type"> Choose </a>
+                                    </div>
+                                    <!-- Pack 2-->
+                                    <div class="col-xs-12 col-sm-6 home-box">
+                                        <h4 class="pricing-header">Equipment Loan</h4>
+                                        <ul>
+                                            <li>Use an asset to secure its own financing</li>
+                                            <li>Keep ownership throughout term</li>
+                                            <li>Generate income with equipment while paying it off</li>
+                                        </ul>
+                                        <a role="button" title="Choose" name="forward" class="button_medium_2 loan-type"> Choose </a>
+                                    </div>
+                                    <!-- Pack 3-->
+                                    <div class="col-xs-12 col-sm-6 home-box">
+                                        <h4 class="pricing-header">Cash Advance</h4>
+                                        <ul>
+                                            <li>Upfront capital for a fraction of future sales</li>
+                                            <li>Protect cash flow – repayment amount changes relative to sales</li>
+                                        </ul>
+                                        <a role="button" title="Choose" name="forward" class="button_medium_2 loan-type"> Choose </a>
+                                    </div>
+                                    <!-- Pack 4-->
+                                    <div class="col-xs-12 col-sm-6 home-box">
+                                        <h4 class="pricing-header">Invoice Factoring</h4>
+                                        <ul>
+                                            <li>Sell accounts receivable for immediate cash</li>
+                                            <li>As sales increase so does access to additional capital</li>
+                                            <li>Spend less time collecting receivables</li>
+                                        </ul>
+                                        <a role="button" title="Choose" name="forward" class="button_medium_2 loan-type"> Choose </a>
+                                    </div>
+                                    <!-- Pack 5-->
+                                    <div class="col-xs-12 col-sm-6 home-box">
+                                        <h4 class="pricing-header">Working Capital</h4>
+                                        <ul>
+                                            <li>Draw only the amount of funds you need, when you need them</li>
+                                            <li>No interest charged against funds not used</li>
+                                        </ul>
+                                        <a role="button" title="Choose" name="forward" class="button_medium_2 loan-type"> Choose </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="step">
                             <div class="row">
                                 <div class="col-xs-12 main-title">
@@ -192,7 +248,6 @@
                                 </div>
                             </div>
                         </div>
-                        
                         <div class="step row">
                             <div class="col-xs-12 main-title">
                                 <h3>Tell us more about your business</h3>
@@ -217,7 +272,6 @@
                                 </ul>
                             </div>
                         </div>
-                        
                         <div class="step row">
                             <div class="col-xs-12 main-title">
                                 <h3>Tell us more about your business</h3>
@@ -256,7 +310,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-md-4 col-sm-4 add_bottom_30 box">
+                <div class="col-xs-12 col-md-4 col-sm-4 box">
                     <div class="number-circle">1</div>
                     <h4>Lorem ipsum</h4>
                     <p>
@@ -264,7 +318,7 @@
                     </p>
                     <a href="#" title="read more" class="button_medium_2">Read more</a>
                 </div>
-                <div class="col-xs-12 col-md-4 col-sm-4 add_bottom_30 box">
+                <div class="col-xs-12 col-md-4 col-sm-4 box">
                     <div class="number-circle">2</div>
                     <h4>Lorem ipsum</h4>
                     <p>
@@ -272,7 +326,7 @@
                     </p>
                     <a href="#" title="read more" class="button_medium_2">Read more</a>
                 </div>
-                <div class="col-xs-12 col-md-4 col-sm-4 add_bottom_30 box">
+                <div class="col-xs-12 col-md-4 col-sm-4 box">
                     <div class="number-circle">3</div>
                     <h4>Lorem ipsum</h4>
                     <p>
