add results step and sub page template for about

--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!doctype html> <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if IE 9 ]><html class="ie ie9" lang="en"> <![endif]-->
 <html lang="en">
     <!--<![endif]-->
@@ -48,7 +47,7 @@
         <script src="assets/js/vendor/respond.min.js"></script>
     </head>
     <body>
-        <section id="top-area" class="striped-bg">
+        <section>
         	<header>
              <!-- Navigation -->
                 <nav class="navbar navbar-default" role="navigation">
@@ -123,42 +122,30 @@
                     <!-- /.container -->
                 </nav>
             </header>
-            <div class="cta-hero">
-                <h1>Find the Right Loan <span>for your business in as little as</span><em> 3 steps</em></h1>
-                <a href="steps.html" title="find a loan" class="button-large">Find a loan</a>
-            </div>
         </section>
         <section class="container" id="main">
             <div class="row">
-                <div class="col-xs-12">
-                    <h3>Identify a Business Loan</h3>
-                    <h4>Get $5,000 - $250,000 in 2 days</h4>
+                <div class="col-sm-3">
+                    <nav class="nav-sidebar">
+                        <ul class="nav">
+                            <li class="active"><a href="">How we help</a></li>
+                            <li><a href="">About us</a></li>
+                            <li><a href="">Contact us</a></li>
+                        </ul>
+                        <a href="#" title="find a loan" class="button-medium">Find a loan</a>
+                    </nav>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-4 col-sm-4 box">
-                    <div class="number-circle">1</div>
-                    <h4>Lorem ipsum</h4>
-                    <p>
-                    Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                    </p>
-                    <a href="#" title="read more" class="button-medium">Read more</a>
-                </div>
-                <div class="col-xs-12 col-md-4 col-sm-4 box">
-                    <div class="number-circle">2</div>
-                    <h4>Lorem ipsum</h4>
-                    <p>
-                    Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                    </p>
-                    <a href="#" title="read more" class="button-medium">Read more</a>
-                </div>
-                <div class="col-xs-12 col-md-4 col-sm-4 box">
-                    <div class="number-circle">3</div>
-                    <h4>Lorem ipsum</h4>
-                    <p>
-                    Lorem ipsum dolor sit amet, in porro albucius qui, in nec quod novum accumsan, mei ludus tamquam dolores id. No sit debitis meliore postulant, per ex prompta alterum sanctus, pro ne quod dicunt sensibus.
-                    </p>
-                    <a href="#" title="read more" class="button-medium">Read more</a>
+                <div class="col-sm-9">
+                    <div class="page-header">
+                        <h1>About Us</h1>
+                    </div>
+                    <div class="page-content">
+                        <h2>About Sageworks Lending</h2>
+                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
+                        <h2>About Sageworks, Inc.</h2>
+                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
+                        <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
+                    </div>
                 </div>
             </div>
         </section>
