--- a/merchant-cash-advance.html
+++ b/merchant-cash-advance.html
@@ -128,23 +128,55 @@
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="">How we help</a></li>
-                            <li class="active" ><a href="">About us</a></li>
-                            <li><a href="">Contact us</a></li>
+                            <li><a href="business-term-loan.html">Business term loan</a></li>
+                            <li><a href="equipment-loan.html">Equipment loan</a></li>
+                            <li class="active"><a href="merchant-cash-advance.html">Merchant cash advance</a></li>
+                            <li><a href="invoice-factoring.html">Invoice factoring</a></li>
+                            <li><a href="working-capital-facility.html">Working capital facility</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
                 </div>
                 <div class="col-sm-9">
                     <div class="page-header">
-                        <h1>About Us</h1>
+                        <h1>Merchant Cash Advance</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
-                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
-                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
-                        <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
+                        <p>In a merchant cash advance, a set amount of future credit/debit card sales can be sold for upfront capital. Repayment of this sum typically occurs as a set percentage of sales until the funding is paid back.</p>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Advantages</h6>
+                                <ul>
+                                    <li>The performance of the business tends to be weighted over personal credit</li>
+                                    <li>Since repayment is typically a percentage of sales volume, business can maintain cash flow in slow periods due to seasonality</li>
+                                    <li>Extremely quick time to funding</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Disadvantages</h6>
+                                <ul>
+                                    <li>Merchant cash advances can carry high rates/fees due to the high risk to the lenders</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Minimum Requirements</h6>
+                                <ul>
+                                    <li>$5,000 in funding needs</li>
+                                    <li>1 year in business</li>
+                                    <li>$15,000 in monthly revenue</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Additional Information Requirements</h6>
+                                <ul>
+                                    <li>3 months of bank statements</li>
+                                    <li>Business tax return</li>
+                                    <li>Personal guarantee</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
