--- a/equipment-loan.html
+++ b/equipment-loan.html
@@ -128,23 +128,53 @@
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="">How we help</a></li>
-                            <li class="active" ><a href="">About us</a></li>
-                            <li><a href="">Contact us</a></li>
+                            <li><a href="business-term-loan.html">Business term loan</a></li>
+                            <li class="active"><a href="equipment-loan.html">Equipment loan</a></li>
+                            <li><a href="merchant-cash-advance.html">Merchant cash advance</a></li>
+                            <li><a href="invoice-factoring.html">Invoice factoring</a></li>
+                            <li><a href="working-capital-facility.html">Working capital facility</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
                 </div>
                 <div class="col-sm-9">
                     <div class="page-header">
-                        <h1>About Us</h1>
+                        <h1>Equipment Loan</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
-                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
-                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
-                        <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
+                        <p>Also known as a "bill of sale," an equipment loan is used when borrowing capital to acquire an asset. This type of loan is secured by the asset being financed.</p>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Advantages</h6>
+                                <ul>
+                                    <li>Consistent payment amounts allow for better financial planning</li>
+                                    <li>Fixed interest rates protect against potential increases in interest-rate markets</li>
+                                    <li>Steady repayments help build credit score</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Disadvantages</h6>
+                                <ul>
+                                    <li>It's possible for the equipment to become obsolete over the payment term</li>
+                                    <li>Process must be repeated for new equipment since the assets secure themselves</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Minimum Requirements</h6>
+                                <ul>
+                                    <li>[Awaiting other requirements]</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Additional Information Requirements</h6>
+                                <ul>
+                                    <li>[Awaiting other requirements]</li>
+                                    <li>Full financial statements, if equipment cost greater than $150,000</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
