add loan and help sub pages

--- a/how-we-help.html
+++ b/how-we-help.html
@@ -128,22 +128,29 @@
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="how-we-help.html">How we help</a></li>
-                            <li class="active"><a href="about.html">About us</a></li>
+                            <li class="active"><a href="how-we-help.html">How we help</a></li>
+                            <li><a href="about.html">About us</a></li>
                             <li><a href="contact.html">Contact us</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
+                        <h3>Why Sageworks?</h3>
+                        <ul>
+                            <li>We get paid by our lending partners, so you pay no fees to us</li>
+                            <li>Your contact info will only be given to the lenders choose</li>
+                        </ul>
                     </nav>
                 </div>
                 <div class="col-sm-9">
                     <div class="page-header">
-                        <h1>About Us</h1>
+                        <h1>How We Help</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
-                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
-                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
+                        <h2>Educate</h2>
+                        <p>Our mission is to educate you, the business owner, on the various forms of capital available to you. Because of this, you pay no additional fees to Sageworks Lending.</p>
+                        <h2>Identify</h2>
+                        <p>Sageworks compares your financial needs against our network of certified lenders to identify the best lending solution and loan type for your business‘s unique needs.</p>
+                        <h2>Connect</h2>
+                        <p>Finally, Sageworks allows you to compare our lenders side-by-side and choose only the ones with which you want to connect. All of your information remains private unless you specifically choose to connect with a lender.</p>
                         <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
                     </div>
                 </div>
