--- a/invoice-factoring.html
+++ b/invoice-factoring.html
@@ -128,23 +128,54 @@
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="how-we-help.html">How we help</a></li>
-                            <li class="active"><a href="about.html">About us</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="business-term-loan.html">Business term loan</a></li>
+                            <li><a href="equipment-loan.html">Equipment loan</a></li>
+                            <li><a href="merchant-cash-advance.html">Merchant cash advance</a></li>
+                            <li class="active"><a href="invoice-factoring.html">Invoice factoring</a></li>
+                            <li><a href="working-capital-facility.html">Working capital facility</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
                 </div>
                 <div class="col-sm-9">
                     <div class="page-header">
-                        <h1>About Us</h1>
+                        <h1>Invoice Factoring</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
-                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
-                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
-                        <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
+                        <p>In an invoice factoring arrangement, a portion of your outstanding customer invoices are sold to a factoring company. This allows you to receive cash upfront for the invoice, instead of waiting for your customers to make the entire payment.</p>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Advantages</h6>
+                                <ul>
+                                    <li>Availability of funding increases as sales grow</li>
+                                    <li>Management time is freed up since the factoring firm is responsible for collecting receivables</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Disadvantages</h6>
+                                <ul>
+                                    <li>Seasonal sales fluctuations can limit access to capital during slower periods</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Minimum Requirements</h6>
+                                <ul>
+                                    <li>$5,000 in funding needs</li>
+                                    <li>6 months in business</li>
+                                    <li>$100,000 in annual revenue</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Additional Information Requirements</h6>
+                                <ul>
+                                    <li>3 months of bank statements</li>
+                                    <li>Invoice to be funded</li>
+                                    <li>Personal guarantee</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
