--- a/contact.html
+++ b/contact.html
@@ -129,22 +129,31 @@
                     <nav class="nav-sidebar">
                         <ul class="nav">
                             <li><a href="how-we-help.html">How we help</a></li>
-                            <li class="active"><a href="about.html">About us</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="about.html">About us</a></li>
+                            <li class="active"><a href="contact.html">Contact us</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
                 </div>
                 <div class="col-sm-9">
                     <div class="page-header">
-                        <h1>About Us</h1>
+                        <h1>Contact Us</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
-                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
-                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
-                        <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
+                        <div class="row">
+                        <div class="col-sm-7">
+                        <p>If you have any questions about Sageworks Lending, feel free to reach out to us using any of the following methods.</p>
+
+                        <p>Email: <a href="mailto:info@sageworkslending.com?Subject=Lending%20General%20Contact">info@sageworkslending.com</a></p>
+                        <p>Phone: <a href="tel:+18666037029">(866) 603-7029</a></p>
+                        <a role="button" href="#" type="button" class="btn btn-default">Live chat</a>
+                        <address> 
+                           <br/> 
+                           230 Park Ave<br/>
+                           Suite 453<br/> 
+                           New York, NY 10169<br/>
+                        </address>
+                                    
                     </div>
                 </div>
             </div>
