--- a/working-capital-facility.html
+++ b/working-capital-facility.html
@@ -128,23 +128,56 @@
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="how-we-help.html">How we help</a></li>
-                            <li class="active"><a href="about.html">About us</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="business-term-loan.html">Business term loan</a></li>
+                            <li><a href="equipment-loan.html">Equipment loan</a></li>
+                            <li><a href="merchant-cash-advance.html">Merchant cash advance</a></li>
+                            <li><a href="invoice-factoring.html">Invoice factoring</a></li>
+                            <li class="active"><a href="working-capital-facility.html">Working capital facility</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
                 </div>
                 <div class="col-sm-9">
                     <div class="page-header">
-                        <h1>About Us</h1>
+                        <h1>Working Capital Facility</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
-                        <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
-                        <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
-                        <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
+                        <p>A working capital facility is an ongoing arrangement between the borrower and lender, allowing the business owner to draw funds against a set, maximum loan balance at any time as long as they do not exceed the limit.</p>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Advantages</h6>
+                                <ul>
+                                    <li>Interest is not charged on the unused portion of the line of credit</li>
+                                    <li>Adaptable financial planning since funds can be drawn whenever necessary</li>
+                                    <li>Variable payments once funds are drawn</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Disadvantages</h6>
+                                <ul>
+                                    <li>Up-front costs often associated with obtaining the line</li>
+                                    <li>Depending on the business structure, an owner may be personally liable for repayment if the business fails</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h6>Minimum Requirements</h6>
+                                <ul>
+                                    <li>1 year in business</li>
+                                    <li>$100,000 in annual revenue</li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6>Additional Information Requirements</h6>
+                                <ul>
+                                    <li>Bank statements</li>
+                                    <li>Financial statements</li>
+                                    <li>Business tax returns
+                                    <li>Personal guarantee</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
